# dsl_pipeline_server

./: CMakeLists.txt  README.md
exmaples/: demo.yaml  pipeline_test.cpp
src/: server_main.cpp
src/common/: config_parse.h  dsl_common.cpp  dsl_common.h  dsl_thread.cpp  dsl_thread.h  logger.cpp  logger.h  non_copyable.h  pipeline_config.cpp  pipeline_config.h  pystring.cpp  server_config.h  uuid.cpp  uuid.h
src/component/: base_config.cpp  base_config.h  infer_config.cpp  infer_config.h  osd_config.cpp  osd_config.h  sink_config.cpp  sink_config.h  source_config.cpp  source_config.h  tracker_config.cpp  tracker_config.h
src/pipeline/: dsl_pipeline.cpp  dsl_pipeline.h  pipeline_manager.cpp  pipeline_manager.h
src/server/: pipeline_server.cpp  pipeline_server.h
